# serial_manipulator_kinematics

./: .gitignore  CMakeLists.txt  README.md
include/smk/model_descriptor/: model_descriptor.h
src/smk/model_descriptor/: model_descriptor.cpp
